2005-07-18  Paolo Carlini  <pcarlini@suse.de>
	    Nathan Myers  <ncm@cantrip.org>

	PR libstdc++/21286
	* include/bits/fstream.tcc (basic_filebuf<>::xsgetn):
	Loop on short reads.

2005-05-27  Mark Mitchell  <mark@codesourcery.com>

	* testsuite/Makefile.in: Regenerate with Automake 1.7.8.

2005-05-19  Release Manager

	* GCC 3.4.4 released.

2005-05-18  Jonathan Wakely  <redi@gcc.gnu.org>

	* docs/html/debug.html: Explain that _GLIBXX_DEBUG_PEDANTIC must
	be defined for pedantic mode.

2005-05-15  Andreas Schwab  <schwab@suse.de>

	* testsuite/Makefile.am (check-local): Really remove.
	* testsuite/Makefile.in: Regenerated.

2005-05-12  Mark Mitchell  <mark@codesourcery.com>

	2005-04-04  Mark Mitchell  <mark@codesourcery.com>
	* testsuite/Makefile.am (check-local): Remove.
	(curent_symbols.txt): Likewise.
	(check-abi): Do not depend on current_symbols.txt.
	* testsuite/Makefile.in: Regenerated.
	* testsuite/libstdc++-abi/abi.exp: Build current_symbols.txt.
	2005-04-01  Mark Mitchell  <mark@codesourcery.com>
	* testsuite/Makefile.am (noinst_PROGRAMS): Remove.
	(site.exp): Write out the path to the baseline file.
	(check-abi): Use DejaGNU.
	(check-abi-verbose): Remove.
	* testsuite/Makefile.in: Regenerated.
	* testsuite/abi_check.cc (main): Check the return value from
	compare_symbols.
	* testsuite/testsuite_abi.cc (compare_symbols): Return a value.
	* testsuite/testsuite_abi.h (compare_symbols): Adjust prototype.
	* testsuite/libstdc++-abi/abi.exp: New file.
	2004-03-19  Phil Edwards  <phil@codesourcery.com>
	* testsuite/Makefile.am (site.exp):  New target, based on that
	created by automake.  Also set libiconv.

2005-05-04  Mark Mitchell  <mark@codesourcery.com>

	* testsuite/lib/libstdc++.exp (v3-build_support): Look for
	__GTHREADS, rather than _GLIBCXX_HAVE_GTHR_DEFAULT, to determine
	whether or not thread support is available.

2005-05-04  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2005-03-25  Mark Mitchell  <mark@codesourcery.com>