@@ -1,6 +1,7 @@
 // 1999-06-03 bkoz
 
-// Copyright (C) 1999, 2000, 2001, 2003, 2004 Free Software Foundation, Inc.
+// Copyright (C) 1999, 2000, 2001, 2003, 2004, 2005
+// Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -32,12 +33,12 @@ void test01(void)
   // 21.1.1 character traits requirements
 
   // Key for decoding what function signatures really mean:
-  // X                == char_traits<_CharT>
+  // X        == char_traits<_CharT>
   // [c,d]    == _CharT
   // [p,q]    == const _CharT*
-  // s                == _CharT*
+  // s        == _CharT*
   // [n,i,j]  == size_t
-  // f                == X::int_type
+  // f        == X::int_type
   // pos      == X::pos_type
   // state    == X::state_type
 
@@ -54,9 +55,11 @@ void test01(void)
   // correctly even where p is in [s, s + n), and yields s.   
   char array1[] = {'z', 'u', 'm', 'a', ' ', 'b', 'e', 'a', 'c', 'h',  0};
   const char str_lit1[] = "montara and ocean beach";
-  int len = sizeof(str_lit1) + sizeof(array1) - 1; // two terminating chars
-  char array2[len];
-  std::char_traits<char>::copy(array2, "boracay, philippines", len);
+  const char str_lit2[] = "boracay, philippines";
+  const int len1 = sizeof(str_lit1)/sizeof(char);
+  const int len2 = sizeof(str_lit2)/sizeof(char);
+  char array2[len1 + len2 - 1]; // two terminating chars
+  std::char_traits<char>::copy(array2, str_lit2, len2);
 
   VERIFY( str_lit1[0] == 'm' );
   c1 = array2[0];
