@@ -1,6 +1,7 @@
 // 1999-06-03 bkoz
 
-// Copyright (C) 1999, 2000, 2001, 2003, 2004 Free Software Foundation, Inc.
+// Copyright (C) 1999, 2000, 2001, 2003, 2004, 2005
+// Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -54,9 +55,11 @@ void test02(void)
   // correctly even where p is in [s, s + n), and yields s.   
   wchar_t array1[] = {L'z', L'u', L'm', L'a', L' ', L'b', L'e', L'a', L'c', L'h',  0};
   const wchar_t str_lit1[] = L"montara and ocean beach";
-  int len = sizeof(str_lit1) + sizeof(array1) - 1; // two terminating chars
-  wchar_t array2[len];
-  std::char_traits<wchar_t>::copy(array2, L"boracay, philippines", len);
+  const wchar_t str_lit2[] = L"boracay, philippines";
+  const int len1 = sizeof(str_lit1)/sizeof(wchar_t);
+  const int len2 = sizeof(str_lit2)/sizeof(wchar_t);
+  wchar_t array2[len1 + len2 - 1]; // two terminating chars
+  std::char_traits<wchar_t>::copy(array2, str_lit2, len2);
 
   VERIFY( str_lit1[0] == 'm' );
   c1 = array2[0];
